2006-06-26  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JList.java
	(init): Set default value for visibleRowCount to 8,
	(setVisibleRowCount): Fire PropertyChangeEvent when value changes.

2006-06-26  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JList.java
	(valueIsAdjusting): Removed,
	(init): Removed initialization of valueIsAdjusting field,
	(getValueIsAdjusting): Fetch value from selection model,
	(setValueIsAdjusting): Store value in selection model.

2006-06-26  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicListUI.java
	(installKeyboardActions): Rewritten to fit with the
	ActionMap/InputMap architecture.
	(uninstallKeyboardActions): Implemented.
	(ListAction): Made private. Added TODO for splitting
	up this bulk Action.
	(ListAction.ListAction): New constructor. This one
	takes a cmd parameter to be installed as actionCommand.

2006-06-26  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/java/security/key/rsa/RSAKeyPairRawCodec.java: Remove RCS Revision.
	* gnu/javax/crypto/assembly/DeflateTransformer.java: Likewise.

2006-06-26  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/javax/crypto/jce/PBKDF2SecretKeyFactory.java: Source formatting.
	* gnu/javax/crypto/jce/GnuSasl.java: Likewise.
	* gnu/javax/crypto/jce/GnuCrypto.java: Likewise.
	* gnu/javax/crypto/jce/DiffieHellmanImpl.java: Likewise.
	* gnu/javax/crypto/jce/spec/UMac32ParameterSpec.java: Likewise.
	* gnu/javax/crypto/jce/spec/TMMHParameterSpec.java: Likewise.
	* gnu/javax/crypto/jce/spec/BlockCipherParameterSpec.java: Likewise.
	* gnu/javax/crypto/jce/sig/DHKeyFactory.java: Likewise.
	* gnu/javax/crypto/jce/prng/UMacRandomSpi.java: Likewise.
	* gnu/javax/crypto/jce/prng/ICMRandomSpi.java: Likewise.
	* gnu/javax/crypto/jce/prng/FortunaImpl.java: Likewise.
	* gnu/javax/crypto/jce/prng/CSPRNGSpi.java: Likewise.
	* gnu/javax/crypto/jce/prng/ARCFourRandomSpi.java: Likewise.
	* gnu/javax/crypto/jce/params/DERWriter.java: Likewise.